# Marketor

./: .gitignore  Makefile  README.md  gmail_draft_generator.py  influencer_parser.py  pyproject.toml
