[project]
name = "marketor"
version = "0.1.0"
description = ""
authors = [
    {name = "Dimitri Kouliche",email = "dkouliche@meilleursagents.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google (>=3.0.0,<4.0.0)",
    "google-auth-oauthlib (>=1.2.2,<2.0.0)",
    "google-api-python-client (>=2.183.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
